fixed button height so the text isn't truncated on long answers

--- a/css/global.css
+++ b/css/global.css
@@ -25,7 +25,7 @@ header {
 	border-bottom: 5px solid #C4666A;
 }
 
-.back-button.arrow,
+.back-button .arrow,
 #arrow {
 	width: 2em;
 	height: 2em;
@@ -100,7 +100,6 @@ MAIN CONTENT
 	font-size: 1.25em;
 	background: rgb(168,53,58);
 	width: 95%;
-	height: 40px;
 	max-width: 95%;
 	padding: 10px;
 	margin: 12px auto;
